--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@actions/core": "^1.10.1",
     "@aws-sdk/client-codedeploy": "^3.592.0",
     "@aws-sdk/client-ecs": "^3.583.0",
+    "https-proxy-agent": "^5.0.0",
     "yaml": "^2.4.3"
   },
   "devDependencies": {
